--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/scroll-shadow": "^2.1.19",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
