--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,10 +13,12 @@
     "@nextui-org/scroll-shadow": "^2.1.19",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "@prisma/client": "^5.21.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "framer-motion": "^11.3.24",
     "next": "^15.0.2",
+    "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
