--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.21.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.3.24",
     "next": "^15.0.2",
     "prisma": "^5.21.1",
